# kbredir

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  configure  configure.in  mkinstalldirs
doc/: ctlseqs.txt
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  protocol.h  read.c  read_linux_console.c  read_vt220.c  read_xev.c  string.c  tab.c  vt220.c  vt220.h  write.c  write_vt220.c  write_xsendevent.c  write_xtest.c  x.c  x.h
